* May 2 2001 hship

Cleanup the Javadoc fiasco from yesterday.  Didn't realize that package and import
statements between the class Javadoc and the class tag caused such a problem!

* May 1 2001 hship

Fix code following package reorganization.
[420454] Should be possible to subclass ServiceLinkEventType


* Apr 24 2001 hship

Cleanup Javadoc warnings by adding extra imports.
Down to a single warning.  That'll do.

* Apr 18 2001 hship

Fixed synchronization in PropertyHelper.buildPropertyAccessors(), to make it
easier to subclass.
[411691] Improve subclassing of PropertyHelper.

* Apr 17 2001 hship

[417065] Use JAXP instead of Xerces
Convert to latest Jetty; convert dependency on Xerces to JAXP 1.1 and use
light-weight Crimson instead of Xerces.
Create com.primix.foundation.xml.AbstractDocumentParser.

* Apr 9 2001 hship

Keep the buffer and parameters live in a StatementAssembly even after
creating the IStatement (useful for debugging).
[414879] ClassCastException / PropertyHelper

* Apr 4 2001 hship

Add some simple method overrides to StatementAssembly to make it more useful.

* Apr 3 2001 hship

Add @since tags to new methods in AbtractEngine.
[413428] DateField should allow format to be specified

* Mar 19 2001 hship

[409751] Action encodes URL wrong

* Mar 7 2001 hship

[406819] handleXXX methods should be protected

* Mar 2 2001 hship

Make it easier to change the StaleLink, StaleSession and Exception page behavior.
Improve PropertyHelper documentation.

* Feb 23 2001 hship

Remove the "is rewinding" check from RenderTemplateHTML ... just rely on the use
of a NullResponseWriter when rewinding.
Deprecate the immediate submit option for the SelectPropertySelectionRenderer.
Fix minor errors in inspector/ShowLogging.html template.
Fix JavaDoc comments in InsertText component.
[132729] AbstractComponent.getBindingNames() doesn't return all names
[132726] Script component with no bindings throws NullPointerException